# mlflow_yfinance

./: .gitignore  README.md  pyproject.toml
notebook/: df.md  model_900.pkl  model_xg.pkl  note.ipynb  train.md  trainhead.md
src/: config.yml  finance_get.py  model_ensemble.py  script_mlflow.py  try.py
