[tool.poetry]
name = "mlflow-yfinance"
version = "0.1.0"
description = ""
authors = ["Thomás Freire <thomas.fsr@gmail.com>"]
readme = "README.md"
packages = [
    { include ="src" }
]

[tool.poetry.dependencies]
python = "^3.11"
scikit-learn = "^1.5.0"
pandas = "^2.2.2"
mlflow = "^2.13.2"
yfinance = "^0.2.40"
taskipy = "^1.12.2"
seaborn = "^0.13.2"
xgboost = "^2.1.0"
lightgbm = "^4.4.0"
tabulate = "^0.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
run = "python src/script_mlflow.py"
mlui = "mlflow ui"